app/styles/main.scss
@import 'bootstrap';
@import 'respons-utils';
@import 'reset';
@import 'vars';
@import 'loader';
@import 'layout/cms-view';

// Partials
@import 'topnav';
@import 'home';
@import 'data-connect';
@import 'retweet-modal';

// Libs
@import 'datetimepicker';
@import 'leaflet';
@import 'photoswipe';
@import 'admin';
@import 'leaflet';
@import 'skins/skin-blue';
@import 'default-skin/default-skin';
@import 'fa';
@import 'ionicons';
@import 'colorpicker';


* {
    font-family: $font-family;
}
.wrapper {
	background-color: white !important;
}


/* Old styles */

	body {
	    font-family: Helvetica, sans-serif;
	    background-color: #F5F8FA;
	}


	.side {
	    .side-block {
	        background-color: $background-dark;
	        -moz-border-radius: 4px;
	        -webkit-border-radius: 4px;
	        border-radius: 4px;
	        -khtml-border-radius: 4px;
	        padding: 20px;
	    }
	}

	.status {
	    padding-bottom: 10px;
	    border-bottom: 1px solid $border-light;
	    margin-bottom: 20px;
	    &.highlight {
	        .inner {
	            margin-left: 218px;
	            .header {
	                .user-avatar {
	                    width: 200px;
	                    height: 200px;
	                    margin-left: -218px;
	                }
	            }
	            .content {
	                font-size: 20px;
	            }
	        }
	    }
	    .inner {
	        margin-left: 58px;
	        .header {
	            .user-avatar {
	                float: left;
	                margin-top: 3px;
	                margin-left: -58px;
	                width: 48px;
	                height: 48px;
	                border-radius: 5px;
	                -moz-force-broken-image-icon: 1;
	            }
	        }
	    }
	}

	.masonry-brick {
	    width: 33.2%;
	    padding: 5px;
	}

	.masonry-brick img {
	    display: block;
	    width: 100.5%;
	    -webkit-border-radius: 4px;
	    -moz-border-radius: 4px;
	    -khtml-border-radius: 4px;
	    border-radius: 4px;
	}

	.evaluation {
	    > div.row {
	        text-align: center;
	    }
	    form {
	        display: inline-block;
	    }
	}

	.eval-widget {
	    .item {
	        min-height: 42px;
	    }
	    margin-top: 50px;
	    padding: 15px;
	    h1 {
	        text-align: center;
	    }
	    border: 1px solid #b4b4b4;
	    border-radius: 7px;
	    .item {
	        position: relative;
	        margin-top: 11px;
	    }
	    p {
	        display: inline-block;
	        position: relative;
	        z-index: 200;
	        font-size: 16px;
	        margin-top: 10px;
	        margin-left: 25px;
	    }
	    .percentage {
	        float: right;
	        display: inline-block;
	        position: relative;
	        z-index: 200;
	        font-size: 16px;
	        margin-top: 10px;
	        margin-right: 15px;
	    }
	    .percent-bar {
	        position: absolute;
	        z-index: 100;
	        left: 15px;
	        height: 100%;
	        border-radius: 5px;
	    }
	}

	.tweeters .percent-bar {
	    background-color: #9BD5BB;
	}

	.mentions .percent-bar {
	    background-color: #87AFCC;
	}

	.tags .percent-bar {
	    background-color: #D6A6BC;
	}

	.date-input {
	    min-width: 275px;
	}

	.wall {
	    margin-top: -70px;
	}

	.wall-search {
	    width: 400px;
	    margin: 0 auto;
	    text-align: center;
	    form {
	        display: inline-block;
	    }
	}

	.wall-display {
	    h1 {
	        text-align: center;
	        font-size: 100px;
	    }
	    .status-list {
	        margin-top: 60px;
	    }
	}

	.animate-repeat.ng-enter,
	.animate-repeat.ng-leave {
	    -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
	    -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
	    -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
	    -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
	    transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
	    position: relative;
	    display: block;
	    overflow: hidden;
	    text-overflow: clip;
	    white-space: nowrap;
	}

	.animate-repeat.ng-leave.ng-leave-active,
	.animate-repeat.ng-enter {
	    opacity: 0;
	    height: 0px;
	}

	.animate-repeat.ng-enter.ng-enter-active,
	.animate-repeat.ng-leave {
	    opacity: 1;
	    height: 200px;
	}

	#wrapper {
	    padding-left: 0;
	    -webkit-transition: all 0.5s ease;
	    -moz-transition: all 0.5s ease;
	    -o-transition: all 0.5s ease;
	    transition: all 0.5s ease;
	}

	#wrapper.toggled {
	    padding-left: 250px;
	}

	#sidebar-wrapper {
	    z-index: 1000;
	    position: fixed;
	    left: 250px;
	    width: 0;
	    height: 100%;
	    margin-left: -250px;
	    overflow-y: auto;
	    background: #000;
	    -webkit-transition: all 0.5s ease;
	    -moz-transition: all 0.5s ease;
	    -o-transition: all 0.5s ease;
	    transition: all 0.5s ease;
	}

	#wrapper.toggled #sidebar-wrapper {
	    width: 250px;
	}

	#page-content-wrapper {
	    width: 100%;
	    position: absolute;
	    padding: 15px;
	}

	.navbar {
	    background-color: $background-top;
	    border: 0;
	    .navbar-brand {
	        color: #fff;
	    }
	}

	.side {
	    .side-block {
	        background-color: $background-dark;
	        -moz-border-radius: 4px;
	        -webkit-border-radius: 4px;
	        border-radius: 4px;
	        -khtml-border-radius: 4px;
	        padding: 20px;
	    }
	}
/* ... */

